--- a/Exercise15_29/README.ME
+++ b/Exercise15_29/README.ME
@@ -4,7 +4,7 @@ This assignment is to create a car and move it across the screen. Also use keys 
 
 ## Example Output
 
-![Sample Output](RaceCar.jpg)
+![Sample Output](Racecar.jpg)
 
 ## Analysis Steps
 This assignment is broken down by building a car object from circles and rectangles. Then placing them on the screen and animating it. Additionally,
